--- a/Views/Rooms/Create.cshtml
+++ b/Views/Rooms/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HijaDobrila2.Data.Rooms
+﻿@model HijaDobrila2.Models.RoomsVM
 
 @{
     ViewData["Title"] = "Create";
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdRoomType" class="control-label"></label>
-                <input asp-for="IdRoomType" class="form-control" />
+                <select  asp-for="IdRoomType" class="form-control" asp-items="@Model.RoomType"></select>
                 <span asp-validation-for="IdRoomType" class="text-danger"></span>
             </div>
             <div class="form-group">
