--- a/Views/Rezervations/Delete.cshtml
+++ b/Views/Rezervations/Delete.cshtml
@@ -12,16 +12,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRoom)
+            @Html.DisplayNameFor(model => model.RoomId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdRoom)
+            @Html.DisplayFor(model => model.RoomId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUser)
+            @Html.DisplayNameFor(model => model.UserId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUser)
+            @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AdultsNum)
