--- a/Views/Rezervations/Details.cshtml
+++ b/Views/Rezervations/Details.cshtml
@@ -11,16 +11,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRoom)
+            @Html.DisplayNameFor(model => model.RoomId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdRoom)
+            @Html.DisplayFor(model => model.RoomId)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdUser)
-        </dt>
+        </dt>*@
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUser)
+            @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AdultsNum)
