--- a/Views/Rezervations/Edit.cshtml
+++ b/Views/Rezervations/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model HijaDobrila2.Data.Rezervation
+﻿@model HijaDobrila2.Models.RezervationsVM
 
 @{
     ViewData["Title"] = "Edit";
@@ -14,15 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="IdRoom" class="control-label"></label>
-                <input asp-for="IdRoom" class="form-control" />
-                <span asp-validation-for="IdRoom" class="text-danger"></span>
+                <label asp-for="RoomId" class="control-label"></label>
+                <input asp-for="RoomId" class="form-control" />
+                <span asp-validation-for="RoomId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="IdUser" class="control-label"></label>
-                <input asp-for="IdUser" class="form-control" />
-                <span asp-validation-for="IdUser" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="AdultsNum" class="control-label"></label>
                 <input asp-for="AdultsNum" class="form-control" />
@@ -43,11 +39,7 @@
                 <input asp-for="DateLeft" class="form-control" />
                 <span asp-validation-for="DateLeft" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DateRezervation" class="control-label"></label>
-                <input asp-for="DateRezervation" class="form-control" />
-                <span asp-validation-for="DateRezervation" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
