--- a/Views/RoomTypes/Index.cshtml
+++ b/Views/RoomTypes/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Създаване на тип стая</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" >Създай нов</a>
 </p>
 <table class="table">
-    <thead>
+    <thead class="roomtype">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.TypeName)
