--- a/Views/Rooms/Index.cshtml
+++ b/Views/Rooms/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Стаи</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Създай нови стаи</a>
 </p>
 <table class="table">
-    <thead>
+    <thead class="rooms">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.RoomNum)
