--- a/Views/RoomTypes/Create.cshtml
+++ b/Views/RoomTypes/Create.cshtml
@@ -4,25 +4,25 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+    <h1>Създаване на тип стаи</h1>
 
-<h4>RoomType</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TypeName" class="control-label"></label>
-                <input asp-for="TypeName" class="form-control" />
-                <span asp-validation-for="TypeName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>Тип стаи</h4>
+
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="TypeName" class="control-label"></label>
+                    <input asp-for="TypeName" class="form-control" />
+                    <span asp-validation-for="TypeName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Създай" style="background-color:lightsteelblue;" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
