--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
 
     <h1 class="display-4">Хижа "Добрила"</h1>
-    <img src="/images/hija-dobrila.jpg" width="96%" />
+    <img src="/images/hija-dobrila.jpg"  />
    
 </div>
 
