--- a/Views/Rezervations/Index.cshtml
+++ b/Views/Rezervations/Index.cshtml
@@ -13,22 +13,22 @@
     <thead class="index">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.RoomId)
+                Номер на стая
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AdultsNum)
+                Брой възрастни
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ChildrensNum)
+                Брой деца
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateArrived)
+                Дата на пристигане
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateLeft)
+                Дата на напускане
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateRezervation)
+                Дата на резервация
             </th>
             <th></th>
         </tr>
