--- a/Views/RoomTypes/Index.cshtml
+++ b/Views/RoomTypes/Index.cshtml
@@ -13,7 +13,7 @@
     <thead class="roomtype">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TypeName)
+                Тип стая
             </th>
             <th></th>
         </tr>
