--- a/Views/Rooms/Details.cshtml
+++ b/Views/Rooms/Details.cshtml
@@ -10,7 +10,7 @@
     <h4>Rooms</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-2"> 
             @Html.DisplayNameFor(model => model.RoomNum)
         </dt>
         <dd class = "col-sm-10">
@@ -29,11 +29,11 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Images)
+         @*   @Html.DisplayNameFor(model => model.Images)*@ 
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Images)
-        </dd>
+           <img src="@Html.DisplayFor(model => model.Images)"/>
+        </dd>"
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PriceForOneNight)
         </dt>
