--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,9 +7,8 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-/* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 .btn-primary {
@@ -18,16 +17,13 @@ a {
   border-color: #1861ac;
 }
 
-
-
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
-  border-color: #1861ac;
+ 
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
+
 html {
   font-size: 14px;
 }
@@ -47,6 +43,7 @@ html {
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  background-color: green;
 }
 
 button.accept-policy {
@@ -64,19 +61,13 @@ button.accept-policy {
     background-color:lightsteelblue;
 }
 
-
-/* Sticky footer styles
--------------------------------------------------- */
 html {
     position: relative;
     min-height: 100%;
 }
 
 body {
-    /* Margin bottom by footer height */
     margin-bottom: 60px;
-    background-image: url(../images/hija-dobrila_.jpg);
-
 }
 
 .footer {
@@ -84,5 +75,5 @@ body {
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;
 }
