--- a/Views/Rezervations/Create.cshtml
+++ b/Views/Rezervations/Create.cshtml
@@ -4,17 +4,17 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Резервация</h1>
 
 <h4>Rezervation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="RoomId" class="control-label"></label>
-                <select asp-for="RoomId" class ="form-control" asp-items="@Model.Rooms"></select>
+                <select asp-for="RoomId" class ="form-control" asp-items="ViewBag.RoomId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="AdultsNum" class="control-label"></label>
@@ -37,7 +37,7 @@
                 <span asp-validation-for="DateLeft" class="text-danger"></span>
             </div>         
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Създай" style="background-color:lightsteelblue;"  class="btn btn-primary" />
             </div>
         </form>
     </div>
