--- a/Views/Rooms/Create.cshtml
+++ b/Views/Rooms/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="RoomNum" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdRoomType" class="control-label"></label>
-                <select  asp-for="IdRoomType" class="form-control" asp-items="@Model.RoomType"></select>
-                <span asp-validation-for="IdRoomType" class="text-danger"></span>
+                <label asp-for="RoomTypeId" class="control-label"></label>
+                <select  asp-for="RoomTypeId" class="form-control" asp-items="@Model.RoomType"></select>
+                <span asp-validation-for="RoomTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
