--- a/Views/Rooms/Delete.cshtml
+++ b/Views/Rooms/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.RoomNum)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRoomType)
+            @Html.DisplayNameFor(model => model.RoomTypeId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdRoomType)
+            @Html.DisplayFor(model => model.RoomTypeId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
