--- a/Views/Rooms/Edit.cshtml
+++ b/Views/Rooms/Edit.cshtml
@@ -19,9 +19,9 @@
                 <span asp-validation-for="RoomNum" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdRoomType" class="control-label"></label>
-                <input asp-for="IdRoomType" class="form-control" />
-                <span asp-validation-for="IdRoomType" class="text-danger"></span>
+                <label asp-for="RoomTypeId" class="control-label"></label>
+                <input asp-for="RoomTypeId" class="form-control" />
+                <span asp-validation-for="RoomTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
